# RTL-SDR-Receiver

./: .gitignore  CMakeLists.txt  README.md  gitmodules  main.cpp  unittest.cmake
TestTask/libs/Complex/: CMakeLists.txt
TestTask/libs/Complex/include/: Complex.h
TestTask/libs/Complex/test/: Complex_test.cpp
TestTask/libs/Filter/include/: Filter.h
TestTask/libs/Filter/source/: Filter.cpp
TestTask/libs/Ireceiver/: CMakeLists.txt
TestTask/libs/Ireceiver/include/: ireceiver.h
TestTask/libs/Ireceiver/source/: ireceiver.cpp
TestTask/libs/ReceiverHWImpl/: CMakeLists.txt
TestTask/libs/ReceiverHWImpl/include/: receiverHWImpl.h
TestTask/libs/ReceiverHWImpl/source/: receiverHWImpl.cpp
TestTask/libs/ReceiverSoftImpl/: CMakeLists.txt
TestTask/libs/ReceiverSoftImpl/include/: receiverHWImpl.h.autosave  receiverSoftImpl.h
TestTask/libs/ReceiverSoftImpl/source/: receiverSoftImpl.cpp
TestTask/libs/convenience/: CMakeLists.txt
TestTask/libs/convenience/include/: convenience.h
TestTask/libs/convenience/source/: convenience.c
TestTask/libs/fft/: CMakeLists.txt
TestTask/libs/fft/include/: fft.h
TestTask/libs/fft/source/: fft.cpp
TestTask/libs/qcustomplot/: CMakeLists.txt
TestTask/libs/rtl-sdr/: CMakeLists.txt
TestTask/libs/rtl-sdr/include/: rtl-sdr.h
TestTask/libs/rtl-sdr/source/: librtlsdr.c  rtl_sdr.c
TestTask/libs/rtlsdr_i2c/: CMakeLists.txt
TestTask/libs/tuner_e4k/: CMakeLists.txt
TestTask/libs/tuner_fc0012/: CMakeLists.txt
TestTask/libs/tuner_fc0013/: CMakeLists.txt
TestTask/libs/tuner_fc2580/: CMakeLists.txt
TestTask/libs/tuner_r82xx/: CMakeLists.txt
TestTask/libs/window/: CMakeLists.txt
TestTask/libs/window/include/: window.h
TestTask/libs/window/source/: window.cpp
cmake/: FindRtlSdr.cmake
cmake/Modules/: FindLibUSB.cmake
include/receiver/: gen_noise.h  gen_sin.h  ireceiver.h  receiverhwimpl.h  receiversoftimpl.h
source/: receiversoftimpl.cpp  receiverwrapper.cpp
src/: CMakeLists.txt  receiverhwimpl.cpp  receiversoftimpl.cpp  receiverwrapper.cpp
src/libs/: CMakeLists.txt
src/libs/include/: complex.h  ireceiver.h  receiverwrapper.h
src/libs/receiver/include/: ireceiver.h  receiverwrapper.h
src/libs/receiver/share/: tuner_e4k.h
src/libs/receiver/src/: fft.h  receiverhwimpl.h  receiversoftimpl.h
src/libs/share/: librtlsdr.c  ringbuffer.cpp  ringbuffer.h  rtl-sdr.h  tuner_e4k.c  tuner_fc0012.c  tuner_r82xx.c
src/libs/src/: fft.cpp  fft.h  gen_noise.cpp  gen_noise.h  gen_sin.cpp  gen_sin.h  receiverhwimpl.cpp  receiverhwimpl.h  receiversoftimpl.cpp  receiversoftimpl.h  receiverwrapper.cpp
test/: fakeReceiverTest.cpp  genNoiseTest.cpp  genSinTest.cpp  getComplexTest.cpp  getSettingsTest.cpp  getSpectrumTest.cpp
test/config/: checkFakeCom  checkFakeSpec  conf.cmake  testNoise1.iqf  test_val_sin
